# InStruct

./: .gitignore
backend/: .env.example  main.py  pyproject.toml  requirements.txt  test_orientation.py
backend/api/: acc_api.py  openai_api.py
backend/api/documents/: documents_router_factory.py
backend/api/fields/: field_router_factory.py
backend/api/files/: file_router_factory.py
backend/database/: database.py
backend/models/: fileBaseMixin.py  file_models.py
backend/ocr/: detect_image_orientation.py  myocr.py  paddle_test.py  prompts.py
backend/services/: ai_service.py  document_service.py  field_service.py  file_service.py
backend/test/: document_identify.py  pdf2image.py  rotate_image.py  zip2img.py
backend/utils/: acc.sh  acc_utils.py  accuracy_result.json  contract_accuracy_result.json  image_utils.py  invoice_accuracy_result.json  landing_accuracy_result.json  openai_utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/standard/发票/: 发票.json  发票1.json  发票5.json  发票6.json  发票7.json  发票8.json  发票9.json
frontend/public/standard/合同/: 合同.json  合同4.json
frontend/public/standard/报关单/: 报关单.json  报关单1.json  报关单2.json  报关单7.json
frontend/public/standard/提单/: 提单4.json  提单9.json
frontend/src/: App.vue  main.js
frontend/src/components/: Head.vue  Sidebar.vue
frontend/src/router/: index.js
frontend/src/views/: Contract.vue  Declaration.vue  Documents.vue  Home.vue  Invoice.vue  Landing.vue  Test.vue
